fixed issue w contact shifting html over w overflow hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x:hidden;
 }
 
 @layer utilities {
@@ -21,6 +22,9 @@ body {
   backface-visibility: hidden;
 }
 
+html {
+  overflow-x: hidden;
+}
 
 
 @layer base {
